[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imps"
version = "0.0.1"
authors = [
{ name="Hugo Lóio"},
]

description = "A package for simulating infinite matrix product state (iMPS) evolution"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "scipy"
]

[project.urls]
Homepage = "https://github.com/Hugo-loio/iMPS"
Issues = "https://github.com/Hugo-loio/iMPS/issues"
